--- a/fimg.css
+++ b/fimg.css
@@ -1,7 +1,7 @@
 .cont{
-    background-color: aqua;
+    background-color: rgb(42, 138, 138);
     width: 300px;
-    border: 2px solid green;
+    border: 2px solid rgb(125, 67, 101);
     padding: 20px;
     margin: 100px;
 
